# spec-driven-bdd-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.sh  spec_driven-evaluate
docs/: ARCHITECTURE.md  COMPARISON.md  DEMO.md  FULL_FLOW.md  INDEX.md  QUICK_START.md  README.md  RECIP.md  SUMMARY.md  TEST_INTERFACE.md  V2_SCORING.md  WRAPPER_VERSIONS.md
examples/user_management/: .spec-driven.toml  example_implementation.py
examples/user_management/generated_code/: api.py
examples/user_management/tests/: behave.ini
examples/user_management/tests/features/: __init__.py  user_management.feature
examples/user_management/tests/features/steps/: __init__.py  user_steps.py
spec_driven/: __init__.py
spec_driven/config/: __init__.py
spec_driven/wrappers/: __init__.py  behave_wrapper.py  behave_wrapper_v2.py  behave_wrapper_v3.py
